fix scrollbars on chrome and safari

--- a/webbox/webbox/main/static/webbox/css/index.css
+++ b/webbox/webbox/main/static/webbox/css/index.css
@@ -499,6 +499,16 @@ ul.errorlist li {
     border-radius: 4px;
 }
 
+/* chrome&safari */
+.rightCourse iframe::-webkit-scrollbar {
+    display: none;
+}
+
+/* chrome&safari */
+.leftCourse::-webkit-scrollbar {
+    display: none;
+}
+
 #commentForm {
     border: none;
     width: 100%;
